pages/docs/cyclonedds-cxx/0.9.0a1/_sources/ddscxx_api_docs/file__home_vsts_work_1_s_repos_cyclonedds-cxx_src_ddscxx_tests_SharedMemory.cpp.rst.txt

.. _file__home_vsts_work_1_s_repos_cyclonedds-cxx_src_ddscxx_tests_SharedMemory.cpp:

File SharedMemory.cpp
=====================

|exhale_lsh| :ref:`Parent directory <dir__home_vsts_work_1_s_repos_cyclonedds-cxx_src_ddscxx_tests>` (``/home/vsts/work/1/s/repos/cyclonedds-cxx/src/ddscxx/tests``)

.. |exhale_lsh| unicode:: U+021B0 .. UPWARDS ARROW WITH TIP LEFTWARDS

.. contents:: Contents
   :local:
   :backlinks: none

Definition (``/home/vsts/work/1/s/repos/cyclonedds-cxx/src/ddscxx/tests/SharedMemory.cpp``)
-------------------------------------------------------------------------------------------


.. toctree::
   :maxdepth: 1

   program_listing_file__home_vsts_work_1_s_repos_cyclonedds-cxx_src_ddscxx_tests_SharedMemory.cpp.rst





Includes
--------


- ``HelloWorldData.hpp``

- ``Serialization.hpp``

- ``Space.hpp``

- ``dds/dds.hpp``

- ``dds/ddsi/ddsi_shm_transport.h``

- ``dds/ddsrt/environ.h``

- ``gtest/gtest.h``

- ``iceoryx_posh/popo/sample.hpp``

- ``iceoryx_posh/popo/subscriber.hpp``

- ``iceoryx_posh/testing/roudi_gtest.hpp``

- ``iceoryx_utils/cxx/optional.hpp``

- ``random``






Classes
-------


- :ref:`exhale_class_classSharedMemoryTest`


Functions
---------


- :ref:`exhale_function_SharedMemory_8cpp_1aa1d2e3c853ccb5ff168a8333f0f9ea79`

- :ref:`exhale_function_SharedMemory_8cpp_1a3b0abc34f96ebc07f2f39dfd5756761f`

- :ref:`exhale_function_SharedMemory_8cpp_1ae12f60af9a23d32147777f370292b954`

- :ref:`exhale_function_SharedMemory_8cpp_1aa8920e18108a296d84af9b7ece5d1d6e`

- :ref:`exhale_function_SharedMemory_8cpp_1ad8bf1fb0fd064b86ab3850ccc01c2b4e`

- :ref:`exhale_function_SharedMemory_8cpp_1a2ad8224b84ce82c2b09bc46429f6f5a4`

- :ref:`exhale_function_SharedMemory_8cpp_1a28da36945183123f17f5b4d8ec658b74`


Defines
-------


- :ref:`exhale_define_SharedMemory_8cpp_1aea78f1706d13b2b6e2114b0cacc7f4e8`


Typedefs
--------


- :ref:`exhale_typedef_SharedMemory_8cpp_1a33282c32fbaa4065685af2e51eeaf9c0`

